changing image extension

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
     <div class="row">
      
       <div class="col-lg-4 text-center wow fadeInLeft">
-        <img src="assets/img/infosys.jpg" alt="">
+        <img src="assets/img/infosys.JPG" alt="">
       </div>
       
       <div class="col-lg-8 about-me-text pl-lg-5">
