--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
         <h4>Personal Information</h4>
         <ul class="personal-info list-inline clearfix mb-5">
           <li><strong>Full Name :</strong> Amisha Thakkar</li>
-          <li><strong>Birthday :</strong> 18 February 1994</li>
+         <!-- <li><strong>Birthday :</strong> </li>-->
           <li><strong>Address :</strong> 1255 E University Drive,</br> apt no 109, Tempe, Az, 85281</li>
           <li><strong>Phone :</strong> +1(559)-(259)-5262</li>
           <li><strong>Email :</strong> <a href="mailto:amisha.thakkar182@gmail.com">amisha.thakkar182@gmail.com</a></li>
