--- a/resume.html
+++ b/resume.html
@@ -129,7 +129,7 @@
             <h3 class="institute-name mb-4 mt-3">Arizona State University</h3>
             <p>
              <br>Tempe, Arizona, USA, 85281</br> 
-			 <br>CGPA: 3.67/4</br>
+			 <br>CGPA: 3.5/4</br>
 
             </p>
           </div>
@@ -185,10 +185,10 @@
 			<br>In Basf my work involved development of rest client services, these services were built on Hybris,
 			in turn involves dealing with java models to have business logic and also involves interaction with the database 
 			whenever retrieval and persistence involves.</br>
-			<br>Developed rest clients then consumed by another technology called as AEM where the output from these services
-			will be rendered on the front end .</br>
-<br>In AVNET my work involved was to deal with SAP technologies like SAP PO which acts as a middleware between Hybris
- and SAP ERP to get the required data</br>
+			<br>Worked on Admin part who has all data for stock of chemical products, client’s personal information, products according to location etc.
+
+</br>
+
 
           </p>
         </div> <!-- END work-exp-block-->
@@ -206,7 +206,7 @@
             Jan 2018-Dec 2018
           </div>
           <p>
-            Advanced Object Oriented with JAVA, includes Design Patterns in JAVA.
+            Advanced Object Oriented with JAVA, includes Design Patterns in JAVA,Object Oriented Program and Intro to Programming Languages.
           </p>
         </div> <!-- END work-exp-block-->
       </div> <!-- END col-md-6 -->
