--- a/resume.html
+++ b/resume.html
@@ -175,7 +175,7 @@
       
       <div class="col-md-6 mt-5">
         <div class="work-exp-block wow fadeIn" data-wow-duration="1s" data-wow-delay=".2s">
-          <h2 class="block-title">System Engineer</h2>
+          <h2 class="block-title">Software Engineer</h2>
           <h3 class="company-name color-text">Infosys, Hyderabad</h3>
           <div class="working-duration">
             Jun 2015–May 2017
