update career summary

--- a/about.html
+++ b/about.html
@@ -124,16 +124,14 @@
         </p>
 		
         <p class="mb-5">
-         I am currently doing master’s in computer science from Arizona State University. 
-		 I have hands-on experience on JAVA, C, C++, Python, .Net, JSP, JSF, and JDBC. 
-		 Seeking an opportunity to leverage my technical and professional expertise to grow in the new role at your company.
+         I am currently doing masters in computer science at Arizona State University. I have hands-on experience on JAVA, C, C++, Python, .Net, AWS, Google Cloud, Full Stack Development, JSP, JSF, and JDBC development projects.
+		Seeking an opportunity to leverage my technical and professional expertise to grow in the new role at your company.
         </p>
         <h4>Personal Information</h4>
         <ul class="personal-info list-inline clearfix mb-5">
           <li><strong>Full Name :</strong> Amisha Thakkar</li>
          <!-- <li><strong>Birthday :</strong> </li>-->
           <li><strong>Address :</strong> 1255 E University Drive,</br> apt no 109, Tempe, Az, 85281</li>
-          <li><strong>Phone :</strong> +1(559)-(259)-5262</li>
           <li><strong>Email :</strong> <a href="mailto:amisha.thakkar182@gmail.com">amisha.thakkar182@gmail.com</a></li>
           
           <!--<li><strong>Skype :</strong> skype_id</li>-->
