updating part time exp

--- a/resume.html
+++ b/resume.html
@@ -207,7 +207,8 @@
           </div>
           <p>
             Advanced Object Oriented with JAVA, includes Design Patterns in JAVA,Object Oriented Program and Intro to Programming Languages.
-          </p>
+     		Teaching Assistant for Web Frameworks during summer.
+		</p>
         </div> <!-- END work-exp-block-->
       </div> <!-- END col-md-6 -->
      
