--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h1 class="hero-title">Hello Guys, I’m <strong>Amisha Thakkar</strong> </h1>
         <p class="hero-tagline">
            I am 
-          <span class="typelist-skill" data-typist="a Graduate Student in CS at ASU">actively looking for a job</span>
+          <span class="typelist-skill" data-typist="a Graduate Student in CS at ASU">actively looking for a full time job</span>
         </p>
       </div> <!-- END col-sm-12-->  
           
