update about content

--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
       
       <div class="col-lg-8 about-me-text pl-lg-5">
         <p >
-          Hello, I’m <strong>Amisha Thakkar</strong>, Software Development professional with 2 years’ 
+          Hello, I’m <strong>Amisha Thakkar</strong>, Software Development professional with 3.5 years’ 
 		  experience in IT industry. You can connect with me on -
 		  <!--
           <a href="#" class="google-plus-link">Google Plus</a>,
@@ -124,14 +124,14 @@
         </p>
 		
         <p class="mb-5">
-         I am currently doing masters in computer science at Arizona State University. I have hands-on experience on JAVA, C, C++, Python, .Net, AWS, Google Cloud, Full Stack Development, JSP, JSF, and JDBC development projects.
-		Seeking an opportunity to leverage my technical and professional expertise to grow in the new role at your company.
+        Software Development professional with 3.5 years’ experience in the IT industry. I have hands-on experience on Java, AWS, MongoDB, Full Stack ßdevelopment projects.
+		Currently I’m working as software engineer in Savvas formerly known as Pearson K12.
         </p>
         <h4>Personal Information</h4>
         <ul class="personal-info list-inline clearfix mb-5">
           <li><strong>Full Name :</strong> Amisha Thakkar</li>
          <!-- <li><strong>Birthday :</strong> </li>-->
-          <li><strong>Address :</strong> 1255 E University Drive,</br> apt no 109, Tempe, Az, 85281</li>
+          <li><strong>Address :</strong> 801 N Fedetal st,</br> apt no 1048, Chandler, Az, 85226</li>
           <li><strong>Email :</strong> <a href="mailto:amisha.thakkar182@gmail.com">amisha.thakkar182@gmail.com</a></li>
           
           <!--<li><strong>Skype :</strong> skype_id</li>-->
