--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
               <span class="lnr lnr-map-marker"></span>
             </div>
             <div class="con-text">
-              1255 E University Drive, apt no 109, Tempe, Arizona, 85281
+             801 N Federal st, apt no 1048, Chandler, Arizona, 85226
             </div>
           </div> <!-- END contact-info-->
 		  
