--- a/resume.html
+++ b/resume.html
@@ -200,14 +200,17 @@
      
       <div class="col-md-6 mt-5">
         <div class="work-exp-block wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
-          <h2 class="block-title">Graduate Service Assistant </h2>
-          <h3 class="company-name color-text">Arizona State University</h3>
+          <h2 class="block-title">Associate Software Engineer </h2>
+          <h3 class="company-name color-text">Savvas formerly knowns as Pearson</h3>
           <div class="working-duration">
-            Jan 2018-Dec 2018
+            Jul 2019- Present
           </div>
           <p>
-            Advanced Object Oriented with JAVA, includes Design Patterns in JAVA,Object Oriented Program and Intro to Programming Languages.
-     		Teaching Assistant for Web Frameworks during summer.
+              
+			<br>Developing and enhancing features to existing Pearson product. Developing automation code which will test,
+	      analyze and determine the efficiency of our product by considering all the positive and negative scenarios</br>
+			<br>Current role is giving me the opportunity to work with JavaScript and its advanced frameworks like NodeJS, Angular and ReactJS.
+</br>
 		</p>
         </div> <!-- END work-exp-block-->
       </div> <!-- END col-md-6 -->
