--- a/resume.html
+++ b/resume.html
@@ -201,7 +201,7 @@
       <div class="col-md-6 mt-5">
         <div class="work-exp-block wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
           <h2 class="block-title">Associate Software Engineer </h2>
-          <h3 class="company-name color-text">Savvas formerly knowns as Pearson</h3>
+          <h3 class="company-name color-text">Savvas formerly known as Pearson</h3>
           <div class="working-duration">
             Jul 2019- Present
           </div>
